--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ rel="stylesheet">
         </div>
         <h4>Redes sociales</h4>
         <div class="icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
+            <a target="_blank" href="https://www.facebook.com/ramunnoyasociados-107374481006548"><i class="fa-brands fa-facebook"></i></a>
+            <a target="_blank" href="https://www.instagram.com/ramunnoyasociados/?hl=es-la"><i class="fa-brands fa-instagram"></i></a>
+            <a target="_blank" href="https://www.linkedin.com/in/daniel-ramunno-39689431/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
     </section> <!-- FIN DEL FOOTER -->
     
