--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ rel="stylesheet">
         <p>Güemes 2215 5to D Mar del Plata, Buenos Aires<br>Maipú 623 1ro A Merlo, Buenos Aires  </p>
 
         <div class="row">
-            <div class="ubi-col">
+            <div id="ubi-mardel" class="ubi-col">
                 <img src="images/mardelplata2.jpg">
                 <div class="layer">
                     <h3>MAR DEL PLATA</h3>
@@ -55,7 +55,7 @@ rel="stylesheet">
 
     <section class="cta">
         <h1>Llamanos si necesitas asistencia legal</h1>
-        <a href="" class="hero-btn">+54 011 50066521 <br> o<br> +54 011 23164252</a>
+        <a href="" class="hero-btn">+54 011 50066521 <br> +54 011 23164252</a>
     </section> <!-- FIN DEL CTA -->
 
     <section class="footer">
