--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ rel="stylesheet">
             <p>Conformamos un grupo de abogados de más de 20 años de experiencia en materia penal, civil, laboral, comercial y de familia.
             <br>Asesorando a nuestros clientes con responsabilidad, profesionalidad y dedicación permanente.
             </p>
-            <a href="" class="hero-btn">Contactanos</a>
+            <a href="" class="hero-btn">Contáctanos</a>
         </div>
     </section> <!-- FIN DEL HEADER-->
 
@@ -55,7 +55,7 @@ rel="stylesheet">
 
     <section class="cta">
         <h1>Llamanos si necesitas asistencia legal</h1>
-        <a href="" class="hero-btn">+54 011 50066521 <br> +54 011 23164252</a>
+        <a href="" class="hero-btn2">+54 011 50066521 <br> +54 011 23164252</a>
     </section> <!-- FIN DEL CTA -->
 
     <section class="footer">
