--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ rel="stylesheet">
 
     <section class="cta">
         <h1>Llamanos si necesitas asistencia legal</h1>
-        <a href="" class="hero-btn2">+54 011 50066521 <br> +54 011 23164252</a>
+        <a href="#" class="hero-btn2">+54 011 50066521 <br> +54 011 23164252</a>
     </section> <!-- FIN DEL CTA -->
 
     <section class="footer">
