--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ rel="stylesheet">
 <body>
     <section class="header">
         <nav>
-        <a href="index.html"><img class="logo" src="images/logo.png" alt=""></a>
+        <a href=""><img class="logo" src="images/logo.png" alt=""></a>
         </nav>
         <div class="text-box">
             <h1>Ramunno & Asociados</h1>
