--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ rel="stylesheet">
                 <form class="form" method="post" action="https://formsubmit.co/aebbad3500545f6a1b453acc0a5c33bf">
                     <button class="closeForm"><i class="fa-solid fa-xmark"></i></button>
                     <h2>Envianos un email</h2>
-                    <input type="text" name="nombre" id="name" placeholder="Tu nombre y apellido">
-                    <input type="email" id="email" placeholder="Tu email">
-                    <input type="text" id="phone" placeholder="Número de teléfono" >
-                    <textarea id="message" rows="4" placeholder="Como te podemos ayudar?"></textarea>
+                    <input type="text" name="Nombre" id="name" placeholder="Tu nombre y apellido" required>
+                    <input type="email" name="email" id="email" placeholder="Tu email" required>
+                    <input type="text" name="Teléfono" id="phone" placeholder="Número de teléfono" >
+                    <textarea name="Consulta" id="message" rows="4" placeholder="Como te podemos ayudar?" required></textarea>
                     <input type="submit" class="send" value="Enviar"/>
                 </form>
             </dialog>
