--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ rel="stylesheet">
     <section class="header">
         <div class="text-box">
             <h1>Ramunno & Asociados</h1>
-            <p>Conformamos un grupo de abogados de más de 20 años de experiencia en materia penal, civil, laboral, comercial y de familia.
+            <p>Conformamos un grupo de abogados con más de 20 años de experiencia en materia penal, civil, laboral, comercial y de familia.
             <br>Asesorando a nuestros clientes con responsabilidad, profesionalidad y dedicación permanente.
             </p>
             <button class="button open-button hero-btn">Contáctanos</button>
