--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ rel="stylesheet">
                     <input type="text" name="Nombre" id="name" placeholder="Tu nombre y apellido" required>
                     <input type="email" name="email" id="email" placeholder="Tu email" required>
                     <input type="text" name="Teléfono" id="phone" placeholder="Número de teléfono" >
-                    <textarea name="Consulta" id="message" rows="4" placeholder="Como te podemos ayudar?" required></textarea>
+                    <textarea name="Consulta" id="message" rows="4" placeholder="Cómo te podemos ayudar?" required></textarea>
                     <input type="submit" class="send" value="Enviar"/>
                 </form>
             </dialog>
