--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ rel="stylesheet">
 
     <section class="cta">
         <h1>Llamanos si necesitas asistencia legal</h1>
-        <p class="hero-btn2">+54 011 50066521 <br> +54 011 23164252</p>
+        <a class="hero-btn2" href="tel:+54 011 50066521">+54 011 50066521</a>
+        <a class="hero-btn2" href="tel:+54 011 23164252">+54 011 23164252</a>
     </section> <!-- FIN DEL CTA -->
 
     <section class="footer">
