--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@ rel="stylesheet">
             <div id="ubi-mardel" class="ubi-col">
                 <img src="images/mardelplata2.jpg">
                 <div class="layer">
-                    <h3>MAR DEL PLATA</h3>
+                    <h3>MAR DEL PLATA <br><span class="city">Güemes 2215 5to D</span></h3>
                 </div> 
             </div> <!-- FIN DE MAR DEL PLATA -->
 
             <div class="ubi-col">
                 <img src="images/merlo2.jpg">
                 <div class="layer">
-                    <h3>MERLO, BUENOS AIRES</h3>
+                    <h3>MERLO, BUENOS AIRES <br><span class="city">Maipú 623 1ro A</span></h3>
                 </div> 
             </div> <!-- FIN DE MERLO -->
         </div> <!-- FIN DEL ROW -->
