--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramunno & Asociados</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="x-icon" href="images/logo.png">
 
     <!-- INTRODUCE LA LIBRERIA DE FONTS GOOGLE PARA FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
