--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@ rel="stylesheet">
             </p>
             <button class="button open-button hero-btn" type="button">Contáctanos</button>
             <dialog class="container modal" id="modal">
-                <form class="form" method="post" action="https://formsubmit.co/aebbad3500545f6a1b453acc0a5c33bf">
+                <form class="form" method="post" action="https://formsubmit.co/aebbad3500545f6a1b453acc0a5c33bf" novalidate>
                     <button class="closeForm" type="button"><i class="fa-solid fa-xmark"></i></button>
                     <h2>Envianos un email</h2>
+                    <p>El precio de la consulta online son $800 <br>abonelos a este cvu: <br><b> 0000003100011399597774<br></b>o alias:<b> ramunnoyasociados</b></p>
                     <input type="text" name="Nombre" id="name" placeholder="Tu nombre y apellido" required>
                     <input type="email" name="email" id="email" placeholder="Tu email" required>
                     <input type="text" name="Teléfono" id="phone" placeholder="Número de teléfono" >
