--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 
 	<title>Ramunno & Asociados</title>
 	<link href="style.css" rel="stylesheet">
-	<link href="images/logo.png" rel="shortcut icon" type="x-icon"><!-- INTRODUCE LA LIBRERIA DE FONTS GOOGLE PARA FUENTES -->
+	<link href="images/logo.png" rel="shortcut icon" type="x-icon">
+    <!-- INTRODUCE LA LIBRERIA DE FONTS GOOGLE PARA FUENTES -->
 	<link href="https://fonts.googleapis.com" rel="preconnect">
 	<link href="https://fonts.gstatic.com" rel="preconnect">
-	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet"><!-- INTRODUCE LA LIBRERIA DE FONT AWESOME PARA ICONOS -->
+	<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,900&family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+    <!-- INTRODUCE LA LIBRERIA DE FONT AWESOME PARA ICONOS -->
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet">
 </head>
 
