--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="google-site-verification" content="lSa8vsxjo458OhzH9tBpTwVDFHYBcNZkZv1u8jKhdBw" />
 
 	<title>Ramunno & Asociados</title>
 	<link href="style.css" rel="stylesheet">
