--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="google-site-verification" content="lSa8vsxjo458OhzH9tBpTwVDFHYBcNZkZv1u8jKhdBw" />
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9FN0JZ3ZJB"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'G-9FN0JZ3ZJB');
+	</script>
+
 	<title>Ramunno & Asociados</title>
 	<link href="style.css" rel="stylesheet">
 	<link href="images/logo.png" rel="shortcut icon" type="x-icon">
