added alts to the images

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 		<div class="row">
 			<div class="ubi-col" id="ubi-mardel">
-				<img src="images/mardelplata2.jpg">
+				<img src="images/mardelplata2.jpg" alt="imagen de mar del plata">
 
 				<div class="layer">
 					<h3>MAR DEL PLATA, BUENOS AIRES<br>
@@ -97,7 +97,7 @@
 
 
 			<div class="ubi-col">
-				<img src="images/merlo2.jpg">
+				<img src="images/merlo2.jpg" alt="imagen de merlo">
 
 				<div class="layer">
 					<h3>MERLO, BUENOS AIRES<br>
